--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -3,23 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/background_color">
+    android:background="@color/background_color"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_movies_list"
-        style="@style/whiteTextStyle14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_4x"
-        android:layout_marginTop="@dimen/dimen_14x"
-        android:drawablePadding="@dimen/dimen_2x"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/movies_list"
-        app:drawableLeftCompat="@drawable/ic_combined_shape"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/dimen_10x"
+        android:background="@color/transparent">
 
+        <TextView
+            android:id="@+id/tv_movies_list"
+            style="@style/whiteTextStyle14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_4x"
+            android:drawablePadding="@dimen/dimen_2x"
+            android:fontFamily="sans-serif-black"
+            android:text="@string/movies_list"
+            app:drawableLeftCompat="@drawable/ic_combined_shape"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movies_list"
