--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/dimen_item_actor_image"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/dimen_item_actor_image"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -12,8 +11,8 @@
         android:layout_width="@dimen/dimen_item_actor_image"
         android:layout_height="@dimen/dimen_item_actor_image"
         android:scaleType="centerCrop"
-        tools:src="@tools:sample/avatars"
-        app:shapeAppearance="@style/shapeActorPhotoStyle" />
+        app:shapeAppearance="@style/shapeActorPhotoStyle"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tv_artist_info"
@@ -21,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_2x"
-        android:fontFamily="sans-serif-black"
         tools:text="@tools:sample/full_names" />
 
 </LinearLayout>
