--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <style name="pgStyle">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="nameDetailsStyle">
@@ -31,26 +32,31 @@
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">6</item>
         <item name="android:shadowRadius">12</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="tagLineDetailsStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/tag_line_color</item>
+        <item name="fontFamily">sans-serif-thin</item>
     </style>
 
     <style name="tagLineTagStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/tag_line_color</item>
+        <item name="fontFamily">sans-serif-thin</item>
     </style>
 
     <style name="reviewDetailsStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/review_color</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="reviewItemStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/review_color</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="storyLineCastStyle">
@@ -60,6 +66,7 @@
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">6</item>
         <item name="android:shadowRadius">12</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="whiteTextStyle14">
@@ -70,11 +77,13 @@
     <style name="actorStyle">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/artist_color</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="minStyle">
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">@color/min_color</item>
+        <item name="fontFamily">sans-serif-black</item>
     </style>
 
     <style name="expandedTitleDetailsStyle">
