--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -128,21 +128,20 @@
             android:layout_marginEnd="@dimen/dimen_2x"
             android:ellipsize="end"
             android:maxLines="1"
-            app:layout_constraintBottom_toTopOf="@id/tv_min"
+            app:layout_constraintTop_toBottomOf="@id/guideline_margin_bottom"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:text="Авенгерс: Энд Гейм" />
 
         <TextView
-            android:id="@+id/tv_min"
+            android:id="@+id/tv_release"
             style="@style/minStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_2x"
             android:textAllCaps="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/tv_movie_name"
-            tools:text="600 min" />
+            tools:text="29/11/1996" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
